# Istriku

./: .gitignore  CMakeLists.txt  README.md
config/: config.json
src/: main.cpp
src/ai/: AIBackend.h  OllamaClient.cpp  OllamaClient.h
src/audio/: MfccExtractor.cpp  MfccExtractor.h  SpeakerVerifier.cpp  SpeakerVerifier.h
src/chat/: ChatController.cpp  ChatController.h  Conversation.cpp  Conversation.h  PromptBuilder.cpp  PromptBuilder.h
src/config/: Config.h  ConfigManager.cpp  ConfigManager.h
src/core/: Application.cpp  Application.h
src/memory/: MemoryEntry.h  MemoryExtractor.cpp  MemoryExtractor.h  MemoryManager.cpp  MemoryManager.h  MemoryPatterns.h  MemoryRetriever.cpp  MemoryRetriever.h  MemoryRules.cpp  MemoryRules.h  MemoryStorage.h  SQLiteMemoryStorage.cpp  SQLiteMemoryStorage.h
src/system/: Command.h  IntentDetector.cpp  IntentDetector.h  WindowsController.cpp  WindowsController.h
src/ui/: MainWindow.cpp  MainWindow.h  TrayWindow.cpp  TrayWindow.h
src/utils/: AudioResampler.cpp  AudioResampler.h  HttpClient.cpp  HttpClient.h  Json.cpp  Json.h  Logger.cpp  Logger.h  StringFuzzy.cpp  StringFuzzy.h  TextNormalizer.cpp  TextNormalizer.h  Utf8Sanitizer.cpp  Utf8Sanitizer.h
src/voice/: ISpeechRecognizer.h  TextToSpeech.cpp  TextToSpeech.h  VoiceRecognizer.h  VoiceSession.cpp  VoiceSession.h  WakeWordDetector.cpp  WakeWordDetector.h  WhisperRecognizer.cpp  WhisperRecognizer.h
tests/: AudioValidationTest.cpp  BrightnessIntentTest.cpp  CommandRecordingTest.cpp  ConfidenceFilterTest.cpp  ConfigTest.cpp  ExtractorTest.cpp  HttpClientTest.cpp  InitialPromptTest.cpp  MemoryRulesTest.cpp  MemoryTest.cpp  MfccExtractorTest.cpp  ModeTransitionTest.cpp  NormalizeRecognitionTest.cpp  OllamaClientTest.cpp  PromptBuilderTest.cpp  RecognitionCallbackTest.cpp  ResamplerTest.cpp  RetrieverTest.cpp  SpeakerVerifierTest.cpp  SystemTest.cpp  TextToSpeechTest.cpp  Utf8SanitizerTest.cpp  VoiceRecognizerTest.cpp  VoiceRoutingTest.cpp  VoiceSessionFlowTest.cpp  VoiceSessionTest.cpp  WakeWordNormalizationTest.cpp  WakeWordTest.cpp
